# rio

./: Cargo.toml  LIZENZ  README.md  cross_compile.sh  sanitizers.sh
examples/: accept.rs  async.rs  async_echo.rs  http_bench.rs  nop.rs  o_direct.rs  seq_read.rs  sqpoll_file.rs  tcp_zero_copy_echo.rs  udp_echo.rs
src/: completion.rs  fastlock.rs  histogram.rs  lazy.rs  lib.rs  metrics.rs
src/io_uring/: config.rs  constants.rs  cq.rs  in_flight.rs  io_uring.rs  kernel_types.rs  mod.rs  sq.rs  syscall.rs  ticket_queue.rs  types.rs  uring.rs
tests/: vec.rs
