[package]
name = "rio"
version = "0.5.3"
authors = ["Tyler Neely <t@jujit.su>"]
edition = "2018"
description = "GPL-3.0 nice bindings for io_uring. MIT/Apache-2.0 license is available for spacejam's github sponsors."
license = "GPL-3.0"
homepage = "https://github.com/spacejam/rio"
repository = "https://github.com/spacejam/rio"
keywords = ["networking", "io-uring", "io_uring", "uring", "io"]
categories = ["asynchronous", "concurrency", "filesystem", "network-programming", "os"]
documentation = "https://docs.rs/rio/"
readme = "README.md"

[dependencies]
libc = "0.2.66"
